<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.galen.opennotes.myrecords.RecordingActivity">

    <include layout="@layout/notes_list_activity_toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/text_youhavebeent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:text="You have been practicing this for "
            android:textColor="#000000"
            android:textSize="22sp" />


        <TextView
            android:id="@+id/_this_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_youhavebeent"
            android:layout_centerHorizontal="true"
            android:textColor="#000000"
            android:textSize="22sp"
            android:textStyle="bold" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/start_button"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerInParent="true"
            android:background="@drawable/startbutton"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="Start Training"
            android:visibility="visible"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <Button
            android:id="@+id/stop_button"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerInParent="true"
            android:background="@drawable/stopbutton"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="Stop"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:visibility="gone" />


        <Button
            android:id="@+id/update_hours_to_firebase_button"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerInParent="true"
            android:background="@drawable/updatebutton"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="Update"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:visibility="gone" />


    </RelativeLayout>


    <TextView
        android:id="@+id/text_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="00:00:00:000"
        android:textSize="32sp"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"/>


</LinearLayout>