...
            android:elevation="5dp"
            android:text="Notes"
            android:textColor="#DBFFEC"
            android:layout_weight="0.13" />

        <Button
            android:id="@+id/my_records"
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/buttonshap"
            android:shadowColor="#46A83B"
            android:elevation="5dp"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="My Records"
            android:textColor="#DBFFEC" />

    </LinearLayout>


</LinearLayout>
...
